CF1-213 Swagger docs Add department documentation
