# src/routes/department.js
@@ -2,6 +2,36 @@ const express = require('express');
 const router = express.Router();
 const { getDepartment, messageResponses } = require('../database');
 
+/**
+ * @swagger
+ *
+ * /api/department:
+ *   get:
+ *     tags:
+ *       - department
+ *     description: Get a department from the database.
+ *     summary: Get department
+ *     consumes:
+ *       - application/json
+ *     produces:
+ *       - application/json
+ *     parameters:
+ *       - name: id
+ *         in: path
+ *         required: true
+ *         type: integer
+ *         format: int64
+ *     responses:
+ *       200:
+ *         description: "Department retrieved"
+ *         schema:
+ *           $ref: "#/responses/Department"
+ *       404:
+ *         description: "Department not found"
+ *       500:
+ *         description: "Internal server error"
+ */
+
 router.get('/:id', async (req, res) => {
   return await getDepartment(req.params.id)
     .then(data => {
